<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileEditting">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00B0D1"
            >
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/btn_return_white"
                android:id="@+id/btn_return"

                />

            <TextView
                android:layout_marginLeft="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="Chỉnh sửa trang cá nhân"
                />
        </androidx.appcompat.widget.Toolbar>



    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        >
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="150dp"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                app:cardElevation="0dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="20dp"
                    android:paddingTop="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ảnh đại diện"
                        android:layout_gravity="center"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        />
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/circleImageAvatar"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/cty"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        />


                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:layout_gravity="center"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                app:cardElevation="1dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ảnh bìa"
                        android:layout_gravity="center"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        />
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        app:cardCornerRadius="30dp"
                        >

                        <ImageView
                            android:id="@+id/anhbia"
                            android:layout_width="320dp"
                            android:layout_height="180dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/cty" />

                    </androidx.cardview.widget.CardView>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:layout_gravity="center"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                app:cardElevation="1dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="25dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/editmota"
                        android:layout_gravity="center"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        />
                    <EditText
                        android:id="@+id/edit_bio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/editmotanhap"
                        android:paddingLeft="20dp"
                        android:padding="15dp"
                        android:background="@color/white"
                        />
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="25dp"
                        app:cardElevation="2dp"
                        android:layout_margin="10dp"
                        android:background="@color/white"
                        >
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_saveBio"
                            android:textColor="@color/white"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:text="@string/save"
                            android:background="#00B0D1"
                            />
                    </androidx.cardview.widget.CardView>



                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:layout_gravity="center"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                app:cardElevation="1dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="25dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/editchitiet"
                        android:layout_gravity="center"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        />
                    <LinearLayout
                        android:id="@+id/container_edit1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        >
                        <ImageView
                            android:id="@+id/ic_education_edit1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_education_light"
                            />
                        <TextView
                            android:id="@+id/tv_education_edit1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/education"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/container_edit2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        >
                        <ImageView
                            android:id="@+id/ic_education_edit2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_education_light"
                            />
                        <TextView
                            android:id="@+id/tv_education_edit2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/education"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/container_edit3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        >
                        <ImageView
                            android:id="@+id/ic_education_edit3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_education_light"
                            />
                        <TextView
                            android:id="@+id/tv_education_edit3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/education"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        >
                        <ImageView
                            android:id="@+id/ic_home_edit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_home_dart"
                            />
                        <TextView
                            android:id="@+id/tv_home_edit1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/harbourage"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        >
                        <ImageView
                            android:id="@+id/ic_hometown_edit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_hometown_dart"
                            />
                        <TextView
                            android:id="@+id/tv_hometown_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/hometown"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        >
                        <ImageView
                            android:id="@+id/ic_relationship_edit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_relationship_dart"
                            />
                        <TextView
                            android:id="@+id/tv_relationship_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/relationshipstatus"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        >
                        <ImageView
                            android:id="@+id/ic_job_edit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_job"
                            />
                        <TextView
                            android:id="@+id/tv_job_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/job"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        >
                        <ImageView
                            android:id="@+id/ic_workplace_edit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_workplace_dart"
                            />
                        <TextView
                            android:id="@+id/tv_workplace_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/workplace"
                            />
                    </LinearLayout>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/white"
                        app:cardCornerRadius="25dp"
                        app:cardElevation="2dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/change_detail"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:background="#00B0D1"
                        android:text="@string/change"
                        android:textColor="@color/white" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </androidx.cardview.widget.CardView>






        </LinearLayout>
    </ScrollView>





</RelativeLayout>