<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileEditting">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00B0D1"
            >
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/btn_return_white"
                android:id="@+id/btn_return"

                />

            <TextView
                android:layout_marginLeft="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="Chỉnh sửa ảnh đại diện"
                />
        </androidx.appcompat.widget.Toolbar>



    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        >
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="150dp"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                app:cardElevation="0dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="20dp"
                    android:paddingTop="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ảnh đại diện"
                        android:layout_gravity="center"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        />
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/avatar_inchangeAvatar"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/cty"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        />


                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:layout_gravity="center"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                app:cardElevation="1dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/motaAvatar"
                        android:layout_gravity="center"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        />
                    <EditText
                        android:id="@+id/edit_content_avatarchanging"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nhapmotaAvatar"
                        android:paddingLeft="20dp"
                        android:padding="15dp"
                        android:background="@color/white"
                        />
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="25dp"
                        app:cardElevation="2dp"
                        android:layout_margin="10dp"
                        android:background="@color/white"
                        >
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_dangChangeAvatar"
                            android:textColor="@color/white"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:text="@string/dang"
                            android:background="#00B0D1"
                            />
                    </androidx.cardview.widget.CardView>




                </LinearLayout>
            </androidx.cardview.widget.CardView>







        </LinearLayout>
    </ScrollView>





</RelativeLayout>